examples/test/testpolicy11621.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11621
  namespace: namespace84
spec:
  podSelector:
    matchLabels:
      key39: value39
      key12: value38
      key31: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value10
          key8: value33
          key3: value26
      podSelector:
        matchLabels:
          key28: value47
